@@ -1,0 +1,9 @@
+<?xml version="1.0"?>
+<metadata>
+    <version>1</version>
+
+    <dependencies>
+        <dependency>profile-ftw.upgrade.tests.profiles:second</dependency>
+    </dependencies>
+
+</metadata>
